tests/NormalTests/paczka1/fuzzy1/80796028.err
Error in line 1: 9wXB0PSx S33 53,1
Error in line 8: 9wXB0PSx A920 70,7
Error in line 13: 9wXB0PSx S796 37,8
Error in line 20: JixeiQ8jo A920 ~4~,6
Error in line 11: ASxAehwMX S481 35,4
Error in line 18: 9wXB0PSx S796 63,2
Error in line 28: 9wXB0PSx S481 25,3
Error in line 31: 9wXB0PSx S33 8,4
Error in line 29: iHxvg S481 141,4
